# ebuild

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  install.bat  install.sh  mkdocs.yml  pyproject.toml  pytest.ini  sbom.json  test_full_pipeline.py
core/eboot/: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  NOTICE  README.md  build.yaml
core/eboot/.reuse/: dep5
core/eboot/boards/am64x/: board_am64x.c  board_am64x.h
core/eboot/boards/cortex_r5/: board_cortex_r5.c  board_cortex_r5.h  cortex_r5_stage0.ld  cortex_r5_stage1.ld
core/eboot/boards/esp32/: board_esp32.c  board_esp32.h
core/eboot/boards/frv/: board_frv.c  board_frv.h
core/eboot/boards/h8300/: board_h8300.c  board_h8300.h
core/eboot/boards/imx8m/: board_imx8m.c  board_imx8m.h
core/eboot/boards/m68k/: board_m68k.c  board_m68k.h
core/eboot/boards/mips/: board_mips.c  board_mips.h
core/eboot/boards/mn103/: board_mn103.c  board_mn103.h
core/eboot/boards/nrf52/: board_nrf52.c  board_nrf52.h
core/eboot/boards/powerpc/: board_powerpc.c  board_powerpc.h
core/eboot/boards/qemu_arm64/: board_qemu_arm64.c  board_qemu_arm64.h
core/eboot/boards/riscv64_virt/: board_riscv64_virt.c  board_riscv64_virt.h
core/eboot/boards/rpi4/: board_rpi4.c  board_rpi4.h
core/eboot/boards/samd51/: board_samd51.c  board_samd51.h
core/eboot/boards/sh4/: board_sh4.c  board_sh4.h
core/eboot/boards/sifive_u/: board_sifive_u.c  board_sifive_u.h
core/eboot/boards/sparc/: board_sparc.c  board_sparc.h
core/eboot/boards/stm32f4/: board_stm32f4.c  board_stm32f4.h  stm32f4_stage0.ld  stm32f4_stage1.ld
core/eboot/boards/stm32h7/: board_stm32h7.c  board_stm32h7.h
core/eboot/boards/stm32mp1/: board_stm32mp1.c  board_stm32mp1.h
core/eboot/boards/strongarm/: board_strongarm.c  board_strongarm.h
core/eboot/boards/v850/: board_v850.c  board_v850.h
core/eboot/boards/x86/: board_x86.c  board_x86.h
core/eboot/boards/x86_64_efi/: board_x86_64_efi.c  board_x86_64_efi.h
core/eboot/boards/xscale/: board_xscale.c  board_xscale.h
core/eboot/configs/: README.md  boot.schema.yaml  flash_layout.schema.yaml  image.schema.yaml
core/eboot/core/: bmc_handoff.c  board_config.c  boot_menu.c  boot_policy.c  bootctl.c  clock_init.c  crypto_boot.c  device_table.c  dram_init.c  ecc_scrub.c  fw_services.c  fw_transport_uart.c  fw_update.c  image_verify.c  mpu_boot.c  multicore.c  os_adapter.c  pci_enum.c  power_init.c  recovery.c  rtos_boot.c  rtos_params.c  runtime_services.c  slot_manager.c  storage.c
core/eboot/docs/: architecture.md  installation_usage.md  memory-map.md  quickstart.md  security.md  update-flow.md
core/eboot/docs/compliance/: ISO_15288_lifecycle.md  ISO_20243_OTTPS.md  ISO_25000_SQuaRE.md  OSS_compliance.md  audit_log.md  risk_register.md  traceability_matrix.md
core/eboot/docs/qms/: quality_management_system.md
core/eboot/hal/: board_registry.c  hal_core.c
core/eboot/include/: eos_bmc_handoff.h  eos_board_config.h  eos_board_registry.h  eos_boot_log.h  eos_boot_menu.h  eos_bootctl.h  eos_clock.h  eos_crypto_boot.h  eos_device_table.h  eos_dram.h  eos_ecc.h  eos_fw_transport.h  eos_fw_update.h  eos_fwsvc.h  eos_hal.h  eos_image.h  eos_mpu_boot.h  eos_multicore.h  eos_os_adapter.h  eos_pci.h  eos_power.h  eos_rtos_boot.h  eos_runtime_svc.h  eos_slot_manager.h  eos_storage.h  eos_types.h
core/eboot/scripts/: generate_config.py
core/eboot/stage0/: hw_init_minimal.c  jump_stage1.c  recovery_entry.c  reset_entry.c  watchdog.c
core/eboot/stage1/: boot_log.c  boot_scan.c  boot_select.c  jump_app.c  main.c
core/eboot/tests/: CMakeLists.txt
core/eboot/tests/unit/: test_board_config.c  test_board_registry.c  test_bootctl.c  test_crypto.c  test_device_table.c  test_multicore.c  test_runtime_svc.c
core/eboot/toolchains/: arm-none-eabi.cmake  riscv64-linux-gnu.cmake  riscv64-unknown-elf.cmake
core/eboot/tools/: imgpack.py  sign_image.py  uart_recovery.py
layers/eai/: CHANGELOG.md  CMakeLists.txt  CODE_STRUCTURE.md  CONTRIBUTING.md  Doxyfile  NOTICE  README.md  build.yaml
layers/eai/.reuse/: dep5
layers/eai/cli/: CMakeLists.txt
layers/eai/cli/src/: main.c
layers/eai/common/: CMakeLists.txt
layers/eai/common/src/: config.c  eipc_listener.c  log.c  manifest.c  (+4 more)
layers/eai/framework/: CMakeLists.txt
layers/eai/min/: CMakeLists.txt
layers/eai/models/: CMakeLists.txt  models.c  models.h
layers/eai/platform/: CMakeLists.txt
layers/eai/tests/: CMakeLists.txt  test_common.c  test_framework.c  test_min.c
layers/eosuite/: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  EoSuite.spec  EoSuite_GUI.bat  EoSuite_GUI.py  NOTICE  README.md  build.bat  build_installer.bat  build_linux.sh  build_log.txt  build_macos.sh  debug_launcher.py  generate_help_pdf.py  pyproject.toml  pytest.ini  requirements-dev.txt  test_renames.py
layers/eosuite/.reuse/: dep5
layers/eosuite/docs/: ADR-001-deployment-architecture.md
layers/eosuite/gui/: __init__.py  home_tab.py  main_window.py  sidebar.py  split_manager.py  styles.py  terminal_tab.py  toolbar.py
layers/eosuite/include/: ebot_client.h  eosuite.h  platform.h
layers/eosuite/src/: calculator.c  ebot_client.c  ebot_main.c  ebuffer.c  echat.c  ecleaner.c  econverter.c  eguard.c  eos_integration_test.c  epaint.c  epdf.c  eplay.c  evpn.c  eweb.c  ezip.c  hex_viewer.c  main.c  notepad.c  platform_unix.c  platform_win.c  serial_term.c  session_manager.c  snake.c  ssh_client.c  timer_app.c
layers/eosuite/tests/: __init__.py  conftest.py  test_chess.py  test_dice.py  test_ebot_client.c  test_ebuffer.py  test_ecal.py  test_echat.py  test_ecleaner.py  test_eclock.py  test_econverter.py  test_eftp.py  test_eguard.py  test_enote.py  test_epaint.py  test_epdf.py  test_eplay.py  test_etimer.py  test_etunnel.py  test_eviewer.py  test_evirustower.py  test_evnc.py  test_evpn.py  test_eweb.py  test_ezip.py  test_imports.py  test_minesweeper.py  test_serial_term.py  test_session_manager.py  test_snake.py  test_ssh_client.py  test_styles.py  test_tetris.py
(+312 files in other folders)
